# Cam-system

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json  vitest.workspace.ts  workspace-source-config.ts
.github/: copilot-instructions.md
.github/agents/: cam-founder.agent.md
.github/workflows/: verify.yml
apps/api/: package.json
apps/api/src/: draft-store.ts  server.test.ts  server.ts
apps/desktop-native/: CMakeLists.txt  CMakePresets.json  README.md
apps/desktop-native/src/: CamWorkbenchMainWindow.cpp  CamWorkbenchMainWindow.hpp  NativeWorkbenchSnapshot.cpp  NativeWorkbenchSnapshot.hpp  OcctStepLoader.cpp  OcctStepLoader.hpp  ProjectFileService.cpp  ProjectFileService.hpp  ViewportFoundationWidget.cpp  ViewportFoundationWidget.hpp  WorkbenchProjectDocument.hpp  main.cpp  resources.qrc
apps/web/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/public/: manifest.webmanifest  sw.js
apps/web/src/: App.css  App.tsx  Viewport3D.tsx  api.ts  index.css  main.tsx  viewportScene.test.ts  viewportScene.ts  workbenchReducer.test.ts  workbenchReducer.ts
docs/: android-usage.md  architecture.md  domain-model.md  native-desktop-workbench.md  roadmap.md
examples/: sample-part.json
